fixed alignement of less > renamed mobile back to phone

--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,3 @@
-@media only screen and (max-width: 500px) {
-  .media-mobile__nav {
-    display: flex;
-    flex-wrap: "";
-    flex-direction: column;
-    justify-content: "";
-    align-items: "";
-    margin: "";
-    margin-top: "";
-    max-width: "";
-    width: "";
-  }
-}
 .btn-media {
   font-size: 1.6rem;
   width: 390px;
