--- a/less/global.less
+++ b/less/global.less
@@ -1,47 +1,52 @@
 // General Styles
-
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
+
 html {
-  font-size: 62.5%;
+    font-size: 62.5%;
 }
 
-html, body {
-  font-family: 'Ubuntu', sans-serif;
+html,
+body {
+    font-family: 'Ubuntu', sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: 'Russo One', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: 'Russo One', sans-serif;
 }
 
 h1 {
-  font-size: 4rem;
+    font-size: 4rem;
 }
 
 h2 {
-  font-size: 3.2rem;
-  padding-bottom: 10px;
+    font-size: 3.2rem;
+    padding-bottom: 10px;
 }
 
 h4 {
-  font-size: 2.5rem;
-  padding-bottom: 10px;
+    font-size: 2.5rem;
+    padding-bottom: 10px;
 }
 
 p {
-  line-height: 1.5;
-  font-size: 1.6rem;
-  padding-bottom: 10px;
+    line-height: 1.5;
+    font-size: 1.6rem;
+    padding-bottom: 10px;
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+    max-width: 100%;
+    height: auto;
 }
 
 .container {
-  max-width: 800px;
-  width: 100%;
-  margin: 0 auto;
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
 }
