--- a/less/variables.less
+++ b/less/variables.less
@@ -13,12 +13,6 @@
 
 
 //Media Queries
-@mobile: ~"only screen and (max-width: 500px)";
-@tablet: ~"only screen and (max-width: 880px)";
+@phone: ~"only screen and (max-width: 500px)";
 
-.media-mobile__nav  {
 
-  @media @mobile {
-    .flex-boxed(@flexdir:column);
-  }
-}
